--- a/WebContent/user/offer/reg.html
+++ b/WebContent/user/offer/reg.html
@@ -24,14 +24,12 @@
                     <li><a href="">예약내역</a></li>
                     <li><a href="">더보기</a></li>
                     <li class="mypage"><a href="">로그인</a>
-                        <div class="mega-menu">
-                            <ul>
+                            <ul class="mega-menu">
                                 <li><a href="">내정보</a></li>
                                 <li><a href="">제안내역</a></li>
                                 <li><a href="">찜한 숙소</a></li>
                                 <li><a href="">로그아웃</a></li>
                             </ul>
-                        </div>
                     </li>
                 </ul>
             </div>
