이벤트 페이지 수정

--- a/WebContent/event/list.html
+++ b/WebContent/event/list.html
@@ -3,26 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/event/list.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/event/list.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-    <title>이벤트 목록</title>
+    <title>TEUM | 틈을 채우다</title>
 </head>
 <body>
-    <header id="header" class="header">
-        <h1><a href="http://127.0.0.1:5500/main.html">틈</a></h1>
-        <nav>
-            <h1>메인메뉴</h1>
-            <ul>
-                <li><a href="">공지사항</a></li>
-                <li><a href="">이벤트</a></li>
-                <li><a href="">더보기</a></li>
-                <li><a href="">로그인</a></li>
-            </ul>
-        </nav>
+    <header class="sec-header-page">
+        <section class="header-sec pcHeader">
+            <div class="header-logo">
+                <h1><a class="teum-logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
+            </div>
+            <div>
+                <ul class="main-menu">
+                    <li class="header_search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
+                    <li><a href="">제안하기</a></li>
+                    <li><a href="">예약내역</a></li>
+                    <li><a href="">더보기</a></li>
+                    <li class="mypage"><a href="">로그인</a>
+                        <div class="mega-menu">
+                            <ul>
+                                <li><a href="">내정보</a></li>
+                                <li><a href="">제안내역</a></li>
+                                <li><a href="">찜한 숙소</a></li>
+                                <li><a href="">로그아웃</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </header>
     
-    <section>
+    <section class="container-sec">
         <div class="container">
             <aside id="aside" class="aside">
                 <h1>게시판</h1>
@@ -35,8 +50,8 @@
             <main id="main" class="main">
                 <div class="breadcrumb">
                     <ul class="breadcrumb-list">
-                        <li><i class="fas fa-home"></i>HOME ▶ </li>
-                        <li>이벤트</li>
+                        <li><i class="fas fa-home"></i>&nbsp;&nbsp;HOME&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i> </li>
+                        <li>&nbsp;&nbsp;&nbsp;이벤트</li>
                     </ul>
                 </div>
                 <section class="event-sec">
