--- a/WebContent/user/offer/reg.html
+++ b/WebContent/user/offer/reg.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <script src="/js/user/offer/reg.js"></script>
-    <title>TEUM | 틈을 채우기 위한 여행</title>
+    <title>TEUM | 틈을 채우다</title>
 </head>
 <body>
     <header class="sec-header-page">
