--- a/WebContent/event/list.html
+++ b/WebContent/event/list.html
@@ -40,11 +40,11 @@
     <section class="container-sec">
         <div class="container">
             <aside id="aside" class="aside">
-                <h1>게시판</h1>
+                <!-- <h1>게시판</h1> -->
                 <ul>
-                    <li><a href="">공지사항</a></li>
-                    <li class="active"><a href="">이벤트</a></li>
-                    <li><a href="">Q&A</a></li>
+                    <li><a href=""><i class="fas fa-exclamation-circle"></i>&nbsp;&nbsp;&nbsp;&nbsp;공지사항</a></li>
+                    <li class="active"><a href=""><i class="far fa-calendar-check"></i>&nbsp;&nbsp;&nbsp;&nbsp;이벤트</a></li>
+                    <li><a href=""><i class="far fa-question-circle"></i>&nbsp;&nbsp;&nbsp;&nbsp;Q&A</a></li>
                 </ul>
             </aside>
             <main id="main" class="main">
