--- a/WebContent/event/list.html
+++ b/WebContent/event/list.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/layout.css">
     <link rel="stylesheet" href="/css/event/list.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
@@ -61,16 +62,22 @@
                         <li><a href="">종료된 이벤트</a></li>
                     </ul>
                     <div class="event-img-container">
+                        <h1>세스코 인증 청결 숙소 이벤트에 참여해 보세요!</h1>
+                        <h2>2020.01.01 ~ 2020.12.31</h2>
                         <div class="scale">
                             <a href=""><img src="../images/event/event1.png" alt=""></a>
                         </div>
                     </div>
                     <div class="event-img-container">
+                        <h1>더블 혜택 할인받고 예약하세요!</h1>
+                        <h2>2020.01.01 ~ 2020.12.31</h2>
                         <div class="scale">
                             <a href=""><img src="../images/event/event2.png" alt=""></a>
                         </div>
                     </div>
                     <div class="event-img-container">
+                        <h1>안전여행 떠나고 10만원 상품권 획득기회!</h1>
+                        <h2>2020.01.01 ~ 2020.12.31</h2>
                         <div class="scale">
                             <a href=""><img src="../images/event/event3.png" alt=""></a>
                         </div>
