--- a/WebContent/admin/promotion/event/detail.html
+++ b/WebContent/admin/promotion/event/detail.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/admin/layout.css">
     <link rel="stylesheet" href="/css/admin/promotion/event/detail.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <title>이벤트 상세페이지</title>
 </head>
