--- a/WebContent/admin/customerService/QnA/list.html
+++ b/WebContent/admin/customerService/QnA/list.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../css/reset.css" type="text/css">
-    <link rel="stylesheet" href="../../../css/admin/layout.css">
+   <link rel="stylesheet" href="../../../css/admin/layout.css">
     <link rel="stylesheet" href="../../../css/admin/QnA/list.css">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <title>questionList</title>
 </head>
 <body>
-     <header class="sec_header">
-        <div class="header pcHeader">
-            <div class="header_h1">
-                <h1><a class="teum_logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
+   <header class="sec-header">
+        <div id="header" class="header">
+            <div class="header-h1">
+                <h1><a class="teum-logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
             </div>
             <div>
-                <ul class="main_menu">
-                    <li class="header_search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
+                <ul class="main-menu">
+                    <li class="header-search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
                     <li><a href="">공지사항</a></li>
                     <li><a href="">이벤트</a></li>
                     <li><a href="">더보기</a></li>
                     <li class="mypage"><a href="">로그인</a>
-                        <div class="mega_menu">
+                        <div class="mega-menu">
                             <ul>
                                 <li><a href="">submenu</a></li>
                                 <li><a href="">submenu</a></li>
@@ -111,11 +111,7 @@
 	                            </tbody>
 	                        </table>
 	                    </section>
-	                    <article class="d-none">
-	                        <p>
-	                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis molestias quod deleniti? Dolores,<br> possimus! Temporibus placeat facilis numquam aspernatur, voluptas aliquid ducimus id odit, soluta, facere assumenda velit ullam deserunt!
-	                        </p>
-	                    </article>
+	                   
 	                    <section>
 	                        <h1 class="d-none">페이지 정보</h1>
 	                        <div>
