--- a/WebContent/accommodationLists/hotelList.html
+++ b/WebContent/accommodationLists/hotelList.html
@@ -7,44 +7,34 @@
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/jun.css">
     <link rel="stylesheet" href="../css/accommodationList/hotelList.css">
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <div class="sec_header">
-        <header class="header pcHeader">
-            <div class="header_h1">
-                <h1><a class="teum_logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
+    <header class="sec-header-page">
+        <section class="header-sec pcHeader">
+            <div class="header-logo">
+                <h1><a class="teum-logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
             </div>
             <div>
-                <ul class="main_menu">
+                <ul class="main-menu">
                     <li class="header_search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
                     <li><a href="">공지사항</a></li>
                     <li><a href="">이벤트</a></li>
                     <li><a href="">더보기</a></li>
                     <li class="mypage"><a href="">로그인</a>
-                        <div class="mega_menu">
+                        <!-- <div class="mega_menu">
                             <ul>
                                 <li><a href="">submenu</a></li>
                                 <li><a href="">submenu</a></li>
                                 <li><a href="">submenu</a></li>
                             </ul>
-                        </div>
+                        </div> -->
                     </li>
                 </ul>
             </div>
-        </header>
-    </div>
-
-    <header class="header mobileHeader">
-        <div>
-            <a href=""><i class="fas fa-bars"></i></a>
-        </div>
-        <div class="header_h1">
-            <h1><a class="teum_logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
-        </div>
-        <div>
-            <a href=""><i class="fas fa-search"></i></a>
-        </div>
+        </section>
     </header>
 
     <div class="container">
