--- a/WebContent/admin/accommodations/list.html
+++ b/WebContent/admin/accommodations/list.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/admin/layout.css">
     <link rel="stylesheet" href="../../css/admin/accommodations/list.css">   
-	<script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
+    <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 	<script src="../../js/admin/accommodations/list.js"></script>
     <title>등록된 업체 리스트</title>
 </head>
@@ -87,8 +89,11 @@
 								<option value="게스트하우스">게스트하우스</option>
 								<option value="리조트">리조트</option>
 								<option value="펜션">펜션</option>
-							</form>
+                            </form><br>
 						</select>
+                        <div class="search">
+                            <span>검색 : </span><input>
+                        </div>
 						<section>
 							<form class="list-board">
 								<table>
