--- a/WebContent/company/accommodation/accommodationDetail.html
+++ b/WebContent/company/accommodation/accommodationDetail.html
@@ -6,6 +6,8 @@
     <title>신라스테이 삼성</title>
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/jun.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <link href="../../css/accommodationList/accommodationDetail.css"  rel="stylesheet">
 </head>
 
