--- a/WebContent/company/accommodation/regAccommodation.html
+++ b/WebContent/company/accommodation/regAccommodation.html
@@ -6,6 +6,8 @@
     <title>(기업)업체등록</title>
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/jun.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../css/company/accommodation/regAccommodation.css ">
 </head>
 
@@ -69,22 +71,217 @@
                 </select>
 
                 <select>
-                    <option value="">서울 전체</option>
+                    <!-- 서울 -->
                     <option value="">강남/역삼/삼성</option>
-                    <option value="">신사/청담/압구정</option>
-                    <option value="">서초/교대/사당</option>
-                    <option value="">잠실/송파/강동</option>
-                    <option value="">을지로/명동/중구</option>
-                    <option value="">서울역/이태원/용산</option>
-                    <option value="">종로/인사동</option>
+                    <!-- 서울 -->
+                    <option value="">강남</option>
+                    <option value="">역삼</option>
+                    <option value="">삼성</option>
+                    <option value="">신사</option>
+                    <option value="">청담</option>
+                    <option value="">압구정</option>
+                    <option value="">서초</option>
+                    <option value="">교대</option>
+                    <option value="">사당</option>
+                    <option value="">잠실</option>
+                    <option value="">송파</option>
+                    <option value="">강동</option>
+                    <option value="">을지로</option>
+                    <option value="">명동</option>
+                    <option value="">중구</option>
+                    <option value="">서울역</option>
+                    <option value="">이태원</option>
+                    <option value="">용산</option>
+                    <option value="">종로</option>
+                    <option value="">인사동</option>
                     <option value="">동대문구</option>
-                    <option value="">홍대/합정/마포/서대문</option>
+                    <option value="">홍대</option>
+                    <option value="">합정</option>
+                    <option value="">마포</option>
+                    <option value="">서대문</option>
                     <option value="">여의도</option>
                     <option value="">영등포역</option>
-                    <option value="">구로/신도림/금천</option>
-                    <option value="">김포공항/염창/강서</option>
-                    <option value="">건대입구/성수/왕십리</option>
-                    <option value="">성북/강북/노원/도봉</option>
+                    <option value="">구로</option>
+                    <option value="">신도림</option>
+                    <option value="">금천</option>
+                    <option value="">김포공항</option>
+                    <option value="">염창</option>
+                    <option value="">강서</option>
+                    <option value="">건대입구</option>
+                    <option value="">성수</option>
+                    <option value="">왕십리</option>
+                    <option value="">성북</option>
+                    <option value="">강북</option>
+                    <option value="">노원</option>
+                    <option value="">도봉</option>
+
+                    <!-- 부산 -->
+                    <option value="">해운대</option>
+                    <option value="">마린시티</option>
+                    <option value="">벡스코</option>
+                    <option value="">센텀시티</option>
+                    <option value="">송정</option>
+                    <option value="">기장</option>
+                    <option value="">광안리</option>
+                    <option value="">경성대</option>
+                    <option value="">부산역</option>
+                    <option value="">자갈치</option>
+                    <option value="">남포동</option>
+                    <option value="">영도</option>
+                    <option value="">송도</option>
+                    <option value="">다대포</option>
+                    <option value="">서면</option>
+                    <option value="">연산</option>
+                    <option value="">범일</option>
+                    <option value="">동래</option>
+                    <option value="">온천</option>
+                    <option value="">금정구</option>
+                    <option value="">사상</option>
+                    <option value="">강서</option>
+                    <option value="">김해공항</option>
+
+                    <!-- 제주 -->
+                    <option value="">제주시</option>
+                    <option value="">제주국제공항</option>
+                    <option value="">서귀포시</option>
+                    <option value="">애월</option>
+                    <option value="">한림</option>
+                    <option value="">협재</option>
+                    <option value="">중문</option>
+                    <option value="">표선</option>
+                    <option value="">성산</option>
+                    <option value="">함덕</option>
+                    <option value="">김녕</option>
+                    <option value="">세화</option>
+                    
+                    <!-- 경기 -->
+                    <option value="">가평</option>
+                    <option value="">청평</option>
+                    <option value="">양평</option>
+                    <option value="">수원</option>
+                    <option value="">화성</option>
+                    <option value="">고양</option>
+                    <option value="">파주</option>
+                    <option value="">김포</option>
+                    <option value="">의정부</option>
+                    <option value="">포천</option>
+                    <option value="">동두천</option>
+                    <option value="">용인</option>
+                    <option value="">동탄</option>
+                    <option value="">오산</option>
+                    <option value="">평택</option>
+                    <option value="">남양주</option>
+                    <option value="">구리</option>
+                    <option value="">성남</option>
+                    <option value="">분당</option>
+                    <option value="">이천</option>
+                    <option value="">광주</option>
+                    <option value="">여주</option>
+                    <option value="">하남</option>
+                    <option value="">부천</option>
+                    <option value="">광명</option>
+                    <option value="">시흥</option>
+                    <option value="">안산</option>
+                    <option value="">안양</option>
+                    <option value="">의왕</option>
+                    <option value="">군포</option>
+
+                    <!-- 인천 -->
+                    <option value="">송도</option>
+                    <option value="">소래포구</option>
+                    <option value="">인천국제공항</option>
+                    <option value="">강화</option>
+                    <option value="">을왕리</option>
+                    <option value="">영종</option>
+                    <option value="">구읍뱃터</option>
+                    <option value="">월미도</option>
+                    <option value="">주안</option>
+                    <option value="">간석</option>
+                    <option value="">인천시청</option>
+                    <option value="">청라</option>
+                    <option value="">계양</option>
+                    <option value="">부평</option>
+
+                    <!-- 강원 -->
+                    <option value="">속초</option>
+                    <option value="">양양</option>
+                    <option value="">고성</option>
+                    <option value="">춘천</option>
+                    <option value="">인제</option>
+                    <option value="">철원</option>
+                    <option value="">강릉</option>
+                    <option value="">평창</option>
+                    <option value="">정선</option>
+                    <option value="">영월</option>
+                    <option value="">동해</option>
+                    <option value="">삼척</option>
+                    <option value="">태백</option>
+                    <option value="">홍천</option>
+                    <option value="">횡성</option>
+                    <option value="">원주</option>
+
+                    <!-- 경상 -->
+                    <option value="">대구</option>
+                    <option value="">구미</option>
+                    <option value="">안동</option>
+                    <option value="">문경</option>
+                    <option value="">경주</option>
+                    <option value="">울산</option>
+                    <option value="">양산</option>
+                    <option value="">거제</option>
+                    <option value="">통영</option>
+                    <option value="">포항</option>
+                    <option value="">영덕</option>
+                    <option value="">울진</option>
+                    <option value="">청송</option>
+                    <option value="">창원</option>
+                    <option value="">마산</option>
+                    <option value="">진해</option>
+                    <option value="">김해</option>
+                    <option value="">남해</option>
+                    <option value="">사천</option>
+                    <option value="">하동</option>
+                    <option value="">진주</option>
+
+                    <!-- 전라 -->
+                    <option value="">전주</option>
+                    <option value="">광주</option>
+                    <option value="">나주</option>
+                    <option value="">여수</option>
+                    <option value="">순천</option>
+                    <option value="">광양</option>
+                    <option value="">구례</option>
+                    <option value="">목포</option>
+                    <option value="">남원</option>
+                    <option value="">무주</option>
+                    <option value="">완주</option>
+                    <option value="">익산</option>
+                    <option value="">군산</option>
+                    <option value="">부안</option>
+                    <option value="">고창</option>
+
+                    <!-- 충청 -->
+                    <option value="">대전</option>
+                    <option value="">세종</option>
+                    <option value="">천안</option>
+                    <option value="">아산</option>
+                    <option value="">도고</option>
+                    <option value="">안면도</option>
+                    <option value="">태안</option>
+                    <option value="">서산</option>
+                    <option value="">덕산</option>
+                    <option value="">보령</option>
+                    <option value="">대천</option>
+                    <option value="">부여</option>
+                    <option value="">공주</option>
+                    <option value="">금산</option>
+                    <option value="">청주</option>
+                    <option value="">음성</option>
+                    <option value="">진천</option>
+                    <option value="">충주</option>
+                    <option value="">제천</option>
+                    <option value="">단양</option>
+                    
                 </select><br>
 
                 <div>
@@ -109,7 +306,7 @@
                     사진 추가 <input type = "button" value = "+"><br>
                     <input type="file" value="+"><br>
                     추가 사항<br>
-                    <input type="text"><br>
+                    <input type="text"><br><br>
                     <div class='addButton'>
                         <button>추가하기</button>
                     </div>
