--- a/WebContent/user/offer/reg.html
+++ b/WebContent/user/offer/reg.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/reset.css" type="text/css" />
+    <link rel="stylesheet" href="/css/layout.css">
     <link rel="stylesheet" href="/css/user/offer/reg.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
@@ -24,12 +25,14 @@
                     <li><a href="">예약내역</a></li>
                     <li><a href="">더보기</a></li>
                     <li class="mypage"><a href="">로그인</a>
-                            <ul class="mega-menu">
+                        <div class="mega-menu">
+                            <ul>
                                 <li><a href="">내정보</a></li>
                                 <li><a href="">제안내역</a></li>
                                 <li><a href="">찜한 숙소</a></li>
                                 <li><a href="">로그아웃</a></li>
                             </ul>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -39,13 +42,6 @@
     <section class="container-sec">
         <div class="container">
             <main id="main" class="main">
-                <!-- <div class="breadcrumb">
-                    <ul class="breadcrumb-list">
-                        <li><i class="fas fa-home"></i>HOME ▶</li>
-                        <li>역제안 등록</li>
-                    </ul>
-                </div> -->
-                <!-- <div class="banner-img"></div> -->
                 <div class="ment-container">
                     <div class="ment-title">Teum</div>
                     <div class="ment-content">
@@ -64,76 +60,81 @@
                 <section class="reg-form-sec">
                     <form action="" method="post" class="reg-form">
                         <div>
-                            <div>
-                                <section>
-                                    <i class="far fa-calendar-alt"></i><span>&nbsp;&nbsp;날짜&nbsp;&nbsp;&nbsp;&nbsp;</span> 
-                                    <input type="date" name="start-date" class="form-option date start-date" required>
-                                    <input type="date" name="end-date" class="form-option date end-date" required>
-                                </section>
-                                <section>
-                                    <i class="fas fa-map-marker-alt"></i><span>&nbsp;&nbsp;지역&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                                    <select class="form-option main-city">
-                                        <option name="seoul">서울</option>
-                                        <!-- 야나두 참고함 -->
-                                        <option name="busan">부산</option>
-                                        <option name="jeju">제주</option>
-                                        <option name="gyeonggi">경기</option>
-                                        <option name="incheon">인천</option>
-                                        <option name="gangwon">강원</option>
-                                        <option name="gyeongsang">경상</option>
-                                        <option name="jeonla">전라</option>
-                                        <option name="chungcheong">충청</option>
-                                    </select>
-                                    <select class="form-option sub-city">
-                                        <option name="sub-option" selected>강남/역삼/삼성</option>
-                                        <option name="sub-option">신사/청담/압구정</option>
-                                        <option name="sub-option">서초/교대/사당</option>
-                                        <option name="sub-option">잠실/송파/강동</option>
-                                        <option name="sub-option">을지로/명동/중구</option>
-                                        <option name="sub-option">서울역/이태원/용산</option>
-                                        <option name="sub-option">종로/인사동</option>
-                                        <option name="sub-option">동대문구</option>
-                                        <option name="sub-option">홍대/합정/마포/서대문</option>
-                                        <option name="sub-option">여의도</option>
-                                        <option name="sub-option">영등포역</option>
-                                        <option name="sub-option">구로/신도림/금천</option>
-                                        <option name="sub-option">김포공항/염창/강서</option>
-                                        <option name="sub-option">건대입구/성수/왕십리</option>
-                                        <option name="sub-option">성북/강북/노원/도봉</option>
-                                    </select>
-                                </section>
-                            </div>
-                            <div>
-                                <section>
-                                    <i class="fas fa-user"></i><span>&nbsp;&nbsp;인원수&nbsp;</span>
-                                    <select class="form-option people-select">
-                                        <option value="" name="people">1</option>
-                                        <option value="" name="people" selected>2</option>
-                                        <option value="" name="people">3</option>
-                                        <option value="" name="people">4</option>
-                                        <option value="" name="people">5</option>
-                                        <option value="" name="people">6</option>
-                                        <option value="" name="people">7</option>
-                                        <option value="" name="people">8</option>
-                                        <option value="" name="people">9</option>
-                                        <option value="" name="people">10</option>
-                                        <option value="" name="people">11</option>
-                                        <option value="" name="people">12</option>
-                                        <option value="" name="people">13</option>
-                                        <option value="" name="people">14</option>
-                                        <option value="" name="people">15</option>
-                                        <option value="" name="people">16</option>
-                                        <option value="" name="people">17</option>
-                                        <option value="" name="people">18</option>
-                                        <option value="" name="people">19</option>
-                                        <option value="" name="people">20</option>
-                                    </select>
-                                </section>
-                                <section>
-                                    <i class="fas fa-won-sign"></i><span>&nbsp;&nbsp;가격&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                                    <input type="text" class="form-option price-input" placeholder="원 단위로 입력해주세요" required>
-                                </section>
-                            </div>
+                            <section>
+                                <i class="far fa-calendar-alt"></i><span>&nbsp;&nbsp;&nbsp;&nbsp;날짜&nbsp;&nbsp;&nbsp;</span> 
+                                <input type="date" name="start-date" class="form-option date start-date" required>
+                                <input type="date" name="end-date" class="form-option date end-date" required>
+                            </section>
+                            <section>
+                                <i class="fas fa-map-marker-alt"></i><span>&nbsp;&nbsp;&nbsp;&nbsp;지역&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                                <select class="form-option main-city">
+                                    <option name="seoul">서울</option>
+                                    <option name="busan">부산</option>
+                                    <option name="jeju">제주</option>
+                                    <option name="gyeonggi">경기</option>
+                                    <option name="incheon">인천</option>
+                                    <option name="gangwon">강원</option>
+                                    <option name="gyeongsang">경상</option>
+                                    <option name="jeonla">전라</option>
+                                    <option name="chungcheong">충청</option>
+                                </select>
+                                <select class="form-option sub-city">
+                                    <option name="sub-option" selected>강남/역삼/삼성</option>
+                                    <option name="sub-option">신사/청담/압구정</option>
+                                    <option name="sub-option">서초/교대/사당</option>
+                                    <option name="sub-option">잠실/송파/강동</option>
+                                    <option name="sub-option">을지로/명동/중구</option>
+                                    <option name="sub-option">서울역/이태원/용산</option>
+                                    <option name="sub-option">종로/인사동</option>
+                                    <option name="sub-option">동대문구</option>
+                                    <option name="sub-option">홍대/합정/마포/서대문</option>
+                                    <option name="sub-option">여의도</option>
+                                    <option name="sub-option">영등포역</option>
+                                    <option name="sub-option">구로/신도림/금천</option>
+                                    <option name="sub-option">김포공항/염창/강서</option>
+                                    <option name="sub-option">건대입구/성수/왕십리</option>
+                                    <option name="sub-option">성북/강북/노원/도봉</option>
+                                </select>
+                            </section>
+                            <section>
+                                <i class="fas fa-hotel"></i><span>&nbsp;&nbsp;&nbsp;타입&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                                <select class="form-option category">
+                                    <option value="" name="">호텔</option>
+                                    <option value="" name="">모텔</option>
+                                    <option value="" name="">펜션</option>
+                                    <option value="" name="">리조트</option>
+                                    <option value="" name="">게스트하우스</option>
+                                </select>
+                            </section>
+                            <section>
+                                <i class="fas fa-user"></i><span>&nbsp;&nbsp;&nbsp;인원수&nbsp;</span>
+                                <select class="form-option people-select">
+                                    <option value="" name="people">1</option>
+                                    <option value="" name="people" selected>2</option>
+                                    <option value="" name="people">3</option>
+                                    <option value="" name="people">4</option>
+                                    <option value="" name="people">5</option>
+                                    <option value="" name="people">6</option>
+                                    <option value="" name="people">7</option>
+                                    <option value="" name="people">8</option>
+                                    <option value="" name="people">9</option>
+                                    <option value="" name="people">10</option>
+                                    <option value="" name="people">11</option>
+                                    <option value="" name="people">12</option>
+                                    <option value="" name="people">13</option>
+                                    <option value="" name="people">14</option>
+                                    <option value="" name="people">15</option>
+                                    <option value="" name="people">16</option>
+                                    <option value="" name="people">17</option>
+                                    <option value="" name="people">18</option>
+                                    <option value="" name="people">19</option>
+                                    <option value="" name="people">20</option>
+                                </select>
+                            </section>
+                            <section>
+                                <i class="fas fa-won-sign"></i><span>&nbsp;&nbsp;&nbsp;가격&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                                <input type="text" class="form-option price-input" placeholder="원(￦) 단위로 입력해 주세요" required>
+                            </section>
                         </div>
                         <section class="submit-btn-sec">
                             <input type="submit" class="btn submit-btn" value="제안하기" />
@@ -151,27 +152,27 @@
                 <ul>
                     <li>
                         <a href="">회사소개</a>
-                        <span>|</span>
+                        <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
                     </li>
                     <li>
                         <a href="">이용약관</a>
-                        <span>|</span>
+                        <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
                     </li>
                     <li>
                         <a href="">개인정보처리방침</a>
-                        <span>|</span>
+                        <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
                     </li>
                     <li>
                         <a href="">사업자정보확인</a>
-                        <span>|</span>
+                        <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
                     </li>
                     <li>
-                        <a href="">여기어때 마케팅센터</a>
-                        <span>|</span>
+                        <a href="">틈 마케팅센터</a>
+                        <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
                     </li>
                     <li>
                         <a href="">액티비티 호스트센터</a>
-                        <span>|</span>
+                        <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
                     </li>
                     <li><a href="">콘텐츠산업진흥법에의한 표시</a></li>
                 </ul>
