--- a/WebContent/company/reverseOffer/detail.html
+++ b/WebContent/company/reverseOffer/detail.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/images/틈로고index.png">
     <link rel="stylesheet" href="/css/reset.css" type="text/css">
     <link rel="stylesheet" href="/css/layout.css">
-    <link rel="stylesheet" href="/css/company/offer/reg.css"  type="text/css">
+    <link rel="stylesheet" href="/css/company/reverseOffer/detail.css"  type="text/css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
@@ -63,7 +64,7 @@
                     <div class="cliper-btn next-btn">
                         <i class="fas fa-angle-right"></i>
                     </div>
-                    <h1>고객으로부터 받은 제안목록입니다!</h1>  
+                    <h1>고객으로부터 받은 제안목록</h1>  
                     <div class="proposal-container">
                         <div class="proposal-info">
                             <h2>제안정보</h2>
@@ -111,13 +112,9 @@
                     </div>
                 </section>
                 <section class="offer-sec">
-                    <h1>승인가능한 숙소 정보</h1>
+                    <h1>고객에게 보낸 숙소 목록</h1>
                     <form class="offer-form">
                         <section>
-                            <div class="checkbox-container">
-                                <input type="checkbox" id="checkbox-1" class="checkbox" required>
-                                <label for="checkbox-1"><span></span></label>
-                            </div>
                             <div class="offer-container">
                                 <div class="offer-img-container">
                                     <!-- <a href=""><img src="http://lorempixel.com/370/220/"></a> -->
@@ -136,10 +133,6 @@
                             </div>
                         </section>
                         <section>
-                            <div class="checkbox-container">
-                                <input type="checkbox" id="checkbox-2" class="checkbox" required>
-                                <label for="checkbox-2"><span></span></label>
-                            </div>
                             <div class="offer-container">
                                 <div class="offer-img-container">
                                     <a href=""><img src="../../images/company/호텔/서울/강남,역삼,삼성/라마다호텔/슈페리얼트윈/슈페리얼트윈2.jpg"></a>
@@ -157,10 +150,6 @@
                             </div>
                         </section>
                         <section>
-                            <div class="checkbox-container">
-                                <input type="checkbox" id="checkbox-3" class="checkbox" required>
-                                <label for="checkbox-3"><span></span></label>
-                            </div>
                             <div class="offer-container">
                                 <div class="offer-img-container">
                                     <a href=""><img src="../../images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/스탠다드_더블/신라스테이_삼성_스탠다드더블2.jpg"></a>
@@ -178,8 +167,8 @@
                                 </div>
                             </div>
                         </section>
-                        <div class="submit-btn-container">
-                            <input type="submit" class="submit-btn" value="승인하기">
+                        <div class="back-btn-container">
+                            <a href="" class="back-btn">돌아가기</a>
                         </div>
                     </form>
                 </section>
