--- a/WebContent/event/detail.html
+++ b/WebContent/event/detail.html
@@ -56,32 +56,36 @@
                     </ul>
                 </div>
                 <section class="event-sec">
-                    <h1>이벤트</h1>
-                    <ul class="event-list">
-                        <li class="current-tab"><a href="">진행중인 이벤트</a></li>
-                        <li><a href="">종료된 이벤트</a></li>
-                    </ul>
-                    <div class="event-img-container">
-                        <h1>세스코 인증 청결 숙소 이벤트에 참여해 보세요!</h1>
-                        <h2>2020.01.01 ~ 2020.12.31</h2>
-                        <div class="scale">
-                            <a href=""><img src="../images/event/event1.png" alt=""></a>
+                    <h1>이벤트 / Event</h1>
+                    <section class="img-sec">
+                        <div class="img-container">
+                            <img src="../../../images/event/detail1.png" alt="">
+                            <!-- <img src="../../../images/event/detail2.png" alt="">
+                            <img src="../../../images/event/detail3.png" alt="">
+                            <img src="../../../images/event/detail4.png" alt="">
+                            <img src="../../../images/event/detail5.png" alt="">
+                            <img src="../../../images/event/detail6.png" alt=""> -->
                         </div>
-                    </div>
-                    <div class="event-img-container">
-                        <h1>더블 혜택 할인받고 예약하세요!</h1>
-                        <h2>2020.01.01 ~ 2020.12.31</h2>
-                        <div class="scale">
-                            <a href=""><img src="../images/event/event2.png" alt=""></a>
+                    </section>
+                    <section class="page-list-sec">
+                        <div class="page prev-page">
+                            <a href="">
+                                <span class="page-direction">이전글</span>
+                                <span class="page-title">축! 갓스물 멤버십 런칭</span>
+                                <span class="page-date">기간: 2020.07.08 ~ 2020.12.31</span>
+                            </a>
                         </div>
-                    </div>
-                    <div class="event-img-container">
-                        <h1>안전여행 떠나고 10만원 상품권 획득기회!</h1>
-                        <h2>2020.01.01 ~ 2020.12.31</h2>
-                        <div class="scale">
-                            <a href=""><img src="../images/event/event3.png" alt=""></a>
+                        <div class="page next-page">
+                            <a href="">
+                                <span class="page-direction">다음글</span>
+                                <span class="page-title">세스코 청결 숙소</span>
+                                <span class="page-date">기간: 2020.09.08 ~ 2020.11.28</span>
+                            </a>
                         </div>
-                    </div>
+                        <div class="btn-container">
+                            <button class="btn-list" onclick="location.href='list.jsp'">목록보기</button>
+                        </div>
+                    </section>
                 </section>
             </main>
         </div>
