--- a/WebContent/event/list.html
+++ b/WebContent/event/list.html
@@ -56,7 +56,7 @@
                     </ul>
                 </div>
                 <section class="event-sec">
-                    <h1>이벤트</h1>
+                    <h1>이벤트 / Event</h1>
                     <ul class="event-list">
                         <li class="current-tab"><a href="">진행중인 이벤트</a></li>
                         <li><a href="">종료된 이벤트</a></li>
